refactor: [POST] job api for creating new one
